Fixed alignment of li text relative to lsit bullet

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,7 +57,7 @@ li {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    /* align-items: center; */
+    align-items: center;
     margin: 1rem 0;
     gap: 1rem;
 }
